<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="inaka.com.mangosta.activities.ManageContactsActivity"
    tools:showIn="@layout/activity_manage_contacts">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/manageContactsSearchUserLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:weightSum="1">

            <EditText
                android:id="@+id/manageContactsSearchUserEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search_user_hint"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/manageContactsSearchUserButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:drawable/ic_menu_search"/>

                <ProgressBar
                    android:id="@+id/manageContactsSearchUserProgressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:visibility="gone"/>

            </FrameLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/manageContactsSearchResultRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/manageContactsSearchUserLayout"
            android:padding="@dimen/activity_horizontal_margin"/>

        <LinearLayout
            android:id="@+id/manageContactsUsersTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/manageContactsSearchResultRecyclerView"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_contacts"
                android:textSize="20sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/half_black"/>

        </LinearLayout>

        <Button
            android:id="@+id/manageContactsUsersRemoveAllContactsButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/manageContactsUsersTitleLayout"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/red"
            android:text="@string/button_remove_all_contacts"
            android:textColor="@color/complete_white"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/manageContactsUsersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/manageContactsUsersRemoveAllContactsButton"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"/>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>