...

    <string name="muc_chat_type">MUC</string>
    <string name="muc_light_chat_type">MUC Light</string>

    <string name="title_blocked_users">Blocked</string>
    <string name="button_unblock_all">Unblock all</string>
    <string name="user_not_found">User not found</string>

    <string name="blog_post_published">Blog post published</string>
    <string name="blog_post_publishing">Publishing blog post</string>

    <string name="title_login">Login</string>
    <string name="title_user_name">User</string>
...
